--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="5.10.3" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net451" />
   <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net451" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net451" requireReinstallation="true" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.5" targetFramework="net451" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.5" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
 </packages>
